# storage/api-docs/api-docs.json
@@ -12,11 +12,51 @@
                 ],
                 "summary": "Get a page of adoptions",
                 "operationId": "eb0fdc02fca4bc574b72713f2486a883",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": 1
+                    },
+                    {
+                        "name": "page-size",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": 20
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "content": {
-                            "application/json": {}
+                            "application/json": {
+                                "schema": {
+                                    "title": "PageOfAdoption",
+                                    "required": [
+                                        "data",
+                                        "meta"
+                                    ],
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Adoption"
+                                            }
+                                        },
+                                        "meta": {
+                                            "$ref": "#/components/schemas/PageMeta"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
                         }
                     }
                 }
@@ -43,16 +83,16 @@
                 }
             }
         },
-        "/api/v1/adoptions/{adoption}": {
+        "/api/v1/adoptions/{adoptionId}": {
             "get": {
                 "tags": [
                     "Adoption"
                 ],
                 "summary": "Get the given pet",
-                "operationId": "501c4e445704b019f8f8848e4b42d8bc",
+                "operationId": "05e1df222f443097ff5b0f03437faaa1",
                 "parameters": [
                     {
-                        "name": "pet",
+                        "name": "adoptionId",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -72,7 +112,9 @@
                         "description": "Not found"
                     }
                 }
-            },
+            }
+        },
+        "/api/v1/adoptions/{adoption}": {
             "put": {
                 "tags": [
                     "Adoption"
@@ -167,13 +209,13 @@
                 }
             }
         },
-        "/api/v1/animals/{animal}": {
+        "/api/v1/animals/{animalId}": {
             "get": {
                 "tags": [
                     "Animal"
                 ],
                 "summary": "Get the given animal",
-                "operationId": "e19e43645410a73ed5ba10a9e3ac6d26",
+                "operationId": "00f34883a902c29c9d83ee33656a0f81",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -188,7 +230,7 @@
                     "Animal"
                 ],
                 "summary": "Update the given animal",
-                "operationId": "3ccd62da32c62815a141deb15bd4c96d",
+                "operationId": "69c427bdd1acc1fb60b201062c3a0181",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -203,7 +245,7 @@
                     "Animal"
                 ],
                 "summary": "Delete the given animal",
-                "operationId": "5a8691ecf90cb852d51d904ffe7c7a0f",
+                "operationId": "de9d1ae4f8e0bc7fd8d5f43810b899c2",
                 "parameters": [
                     {
                         "name": "animal",
@@ -381,16 +423,16 @@
                 }
             }
         },
-        "/api/v1/pets/{pet}": {
+        "/api/v1/pets/{petId}": {
             "get": {
                 "tags": [
                     "Pet"
                 ],
                 "summary": "Get the given pet",
-                "operationId": "02194f64e47974ee3b5b01eb231526f3",
+                "operationId": "fef695c3cc95448a6f63a12c9fde764d",
                 "parameters": [
                     {
-                        "name": "pet",
+                        "name": "petId",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -416,7 +458,7 @@
                     "Pet"
                 ],
                 "summary": "Update a pet",
-                "operationId": "173b6179de0b0ea2e5b31ae607834efb",
+                "operationId": "f167d8510b70a59e918875e8eb16ce48",
                 "responses": {
                     "200": {
                         "description": "Created",
@@ -434,7 +476,7 @@
                     "Pet"
                 ],
                 "summary": "Delete a pet",
-                "operationId": "03b75c362c9191f98c6cd9a43fc0ee1f",
+                "operationId": "8f63027642006a17fdada5542d46fea6",
                 "parameters": [
                     {
                         "name": "petId",
@@ -676,6 +718,18 @@
                 "type": "object"
             },
             "AdoptionCollection": {},
+            "Adoption": {
+                "required": [
+                    "id"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    }
+                },
+                "type": "object"
+            },
             "AnimalDetails": {
                 "required": [
                     "id",
